# steward-federation

./: README.md  nadi_gc.py  nadi_inbox.json  nadi_kit.py  nadi_outbox.json  pyproject.toml
.well-known/: agent-federation.json
nadi/: agent-city_to_*.json  agent-city_to_agent-internet.json  agent-city_to_agent-research.json  agent-city_to_agent-template-acceptance-node-05.json  agent-city_to_agent-template.json  agent-city_to_agent-world.json  agent-city_to_e2e-proof-node.json  agent-city_to_steward-federation.json  agent-city_to_steward-protocol.json  agent-city_to_steward-test.json  agent-city_to_steward.json  agent-city_to_test-node.json  agent-internet_to_agent-city.json  agent-internet_to_agent-research.json  agent-internet_to_agent-world.json  agent-internet_to_steward-federation.json  agent-internet_to_steward-protocol.json  agent-internet_to_steward-test.json  agent-internet_to_steward.json  agent-research_to_*.json  agent-research_to_agent-city.json  agent-research_to_agent-internet.json  agent-research_to_agent-template-acceptance-node-05.json  agent-research_to_agent-template.json  agent-research_to_agent-world.json  agent-research_to_e2e-proof-node.json  agent-research_to_steward-federation.json  agent-research_to_steward-protocol.json  agent-research_to_steward-test.json  agent-research_to_steward.json  agent-research_to_test-node.json  agent-template-acceptance-node-05_to_agent-city.json  agent-template-acceptance-node-05_to_agent-internet.json  agent-template-acceptance-node-05_to_agent-research.json  agent-template-acceptance-node-05_to_agent-world.json  (+75 more)
(+5 files in other folders)
