[project]
dependencies = ["cryptography>=41.0"]
name = "nadi-kit"
version = "0.1.0"
description = "Shared NADI federation transport for agent mesh nodes"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "cryptography>=41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["nadi_kit.py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
timeout = 30

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
nadi = "nadi_kit:cli_main"
